crates/toml_edit/tests/fixtures/invalid/array/tables-2.stderr
TOML parse error at line 9, column 3
  |
9 |   [fruit.variety]
  |   ^
Invalid table header
Duplicate key `variety` in table `fruit`
